# project-map-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: test_against_wde.sh
src/project_map_cli/cli/: main.py
src/project_map_cli/core/: README.md  __main__.py  bundle.py  cli.py  config.py  hydration.py  orchestrator.py  query_engine.py  run.sh
src/project_map_cli/core/analyzers/: __init__.py  api_clients_map.py  ctor_signatures.py  db_schema.py  digest_top.py  fastapi_routes.py  fe_calls.py  files_index.py  go_symbols.py  gradle_modules.py  imports_repo_only.py  inheritance.py  kafka_streams_eda.py  kotlin_calls.py  kotlin_symbols.py  pydantic_models.py  python_symbols.py  rust_symbols.py  symbol_registry.py  typescript_symbols.py  vue_analyzer.py
src/project_map_cli/core/common/: __init__.py  ast_utils.py  filters.py  fs_scan.py  graph_serialization.py  hashing.py  order.py  pid_registry.py  root_resolver.py  tree_sitter_util.py  write.py
src/project_map_cli/core/queries/: kotlin.scm
src/project_map_cli/core/tests/: test_cli_smoke.py
src/project_map_cli/core/tests/validation/: audit_coverage.py  fixtures.py  test_coverage_and_signals.py  test_kafka_streams.py  test_robustness.py  verify.py
src/project_map_cli/mcp/: server.py
tests/: test_cli.py  test_file_context.py  test_query_engine.py
tests/e2e/: test_analyzers.py  test_full_stack.py  utils.py
tests/fixtures/docs/repo_summary/latest/: analyzers.repo_only.json  edges_1.json  kafka.streams_eda.json  kotlin.symbols.json  metadata.json  paths.json
(+12 files in other folders)
